update auth and user and done hotel
